# NominalRefactorAdvisor

./: .gitignore  .venv  README.md  pyproject.toml
.github/workflows/: coverage-pages.yml  integration-tests.yml  publish.yml
docs/source/: conf.py  index.rst
dq_dock_engine/refactor_advisor/: __init__.py  ast_tools.py  cli.py  detectors.py  models.py  patterns.py
dq_dock_engine/tests/: test_refactor_advisor.py
nominal_refactor_advisor/: __init__.py  __main__.py  analysis.py  analysis_cache.py  annotation_semantics.py  assignment_projection.py  ast_tools.py  cache_paths.py  calibration.py  candidate_collection_semantics.py  class_composition.py  class_index.py  cli.py  codemod.py  codemod_authoring.py  codemod_source_cache.py  codemod_spacing.py  codemod_workflow.py  collection_algebra.py  constructor_algebra.py  descriptor_algebra.py  detectors.py  economics.py  export_tools.py  factorization.py  finding_counts.py  impact_ranking.py  lean_export.py  models.py  name_algebra.py  observation_families.py  observation_graph.py  observation_shapes.py  patterns.py  planner.py  product_record_schema.py  record_algebra.py  registry_identity.py  registry_normal_form.py  scan_prediction.py  (+10 more)
nominal_refactor_advisor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nominal_refactor_advisor/detectors/: __init__.py  _abstraction_reuse.py  _base.py  _helpers.py  _implementations.py  _reflection.py  (+9 more)
tests/: test_analysis_cache.py  test_detector_registry_imports.py  test_refactor_advisor.py  test_semantic_descent.py  test_semantic_inspection.py
(+31 files in other folders)
