[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nominal-refactor-advisor"
version = "0.1.0"
description = "AST-driven advisor for canonical nominal refactoring patterns"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenHCSDev" }]

[project.scripts]
nominal-refactor-advisor = "nominal_refactor_advisor.cli:main"

[project.optional-dependencies]
docs = [
    "Sphinx>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
